<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/add_article_form" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_add_article_form_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				tools:ignore="UselessParent">

				<View   android:id="@+id/_bg__add_article_form_ek2"
					android:background="@drawable/_bg__add_article_form_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="393dp"
					android:layout_height="852dp" />


				<RelativeLayout android:id="@+id/close_button"
					android:layout_marginTop="774dp"
					android:layout_marginStart="313dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/ellipse_1"
						android:background="@drawable/ellipse_1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="60dp"
						android:layout_height="60dp" />


					<RelativeLayout android:id="@+id/material_symbols_close"
						android:layout_marginTop="18dp"
						android:layout_marginStart="18dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/vector"
							android:src="@drawable/vector"
							 android:layout_marginStart="5dp"
							android:layout_marginTop="5dp"
							android:layout_width="14dp"
							android:layout_height="14dp" />

					</RelativeLayout>

				</RelativeLayout>

				<ImageView android:id="@+id/rectangle_2"
					android:src="@drawable/rectangle_2"
					 android:layout_marginStart="37dp"
					android:layout_marginTop="186dp"
					android:layout_width="320dp"
					android:layout_height="65dp" />

				<TextView android:id="@+id/titre"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="24sp"
					android:layout_marginStart="45dp"
					android:layout_marginTop="204dp"
					android:layout_width="73dp"
					android:layout_height="46dp"
					android:text="@string/titre_string"
					 />

				<ImageView android:id="@+id/rectangle_3"
					android:src="@drawable/rectangle_3"
					 android:layout_marginStart="34dp"
					android:layout_marginTop="271dp"
					android:layout_width="320dp"
					android:layout_height="359dp"
					android:contentDescription="TODO" />

				<TextView android:id="@+id/contenu"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="24sp"
					android:layout_marginStart="139dp"
					android:layout_marginTop="292dp"
					android:layout_width="119dp"
					android:layout_height="46dp"
					android:text="@string/contenu_string"
					 />

				<TextView android:id="@+id/ajouter_un_article"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="24sp"
					android:layout_marginStart="91dp"
					android:layout_marginTop="153dp"
					android:layout_width="221dp"
					android:layout_height="30dp"
					android:text="@string/ajouter_un_article_string"
					 />

				<TextView android:id="@+id/simpleblog"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="40sp"
					android:layout_marginStart="13dp"
					android:layout_marginTop="50dp"
					android:layout_width="246dp"
					android:layout_height="76dp"
					android:text="@string/simpleblog_string"
					 />


				<RelativeLayout android:id="@+id/add_form_button"
					android:layout_marginTop="650dp"
					android:layout_marginStart="37dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/rectangle_4"
						android:src="@drawable/rectangle_4"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="320dp"
						android:layout_height="65dp"
						 />

					<TextView android:id="@+id/ajouter"
						android:textStyle="bold"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="24sp"
						android:layout_marginStart="98dp"
						android:layout_marginTop="18dp"
						android:layout_width="132dp"
						android:layout_height="46dp"
						android:textColor="@color/ajouter"
						android:text="@string/ajouter_string"
						 />

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>